# economics

./: LICENSE  README.md  pyproject.toml
diffusion_dashboard/: __init__.py  cli.py  config.py  utils.py
diffusion_dashboard/data/: exposure.py  loaders.py  registry.py  transforms.py
diffusion_dashboard/metrics/: alerts.py  indicators.py
diffusion_dashboard/models/: did.py  diffusion.py  dlag.py
diffusion_dashboard/viz/: plots.py
docs/: api.md  index.md
examples/: run_pipeline.py
tests/: test_alerts.py
